Add GET /{shortURL} handler
